// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar should renders default 1`] = `
<styled.div>
  <Tool
    icon={[Function]}
    id="workstage"
    isActive={false}
    key="0"
    onClick={[Function]}
    tooltip="Workstage"
  />
  <Tool
    icon={[Function]}
    id="extensions"
    isActive={false}
    key="1"
    onClick={[Function]}
    tooltip="Extensions"
  />
</styled.div>
`;

exports[`Sidebar should renders with active item 1`] = `
<styled.div>
  <Tool
    icon={[Function]}
    id="workstage"
    isActive={false}
    key="0"
    onClick={[Function]}
    tooltip="Workstage"
  />
  <Tool
    icon={[Function]}
    id="extensions"
    isActive={true}
    key="1"
    onClick={[Function]}
    tooltip="Extensions"
  />
</styled.div>
`;
